--- a/css/reset.css
+++ b/css/reset.css
@@ -48,3 +48,21 @@ table {
 body {
 	-webkit-text-size-adjust: 100%;
 }
+a {
+    text-decoration: none;
+}
+h1 {
+	font-size: 30px;
+    font-size: 3.0rem;
+    line-height: 1.4;
+}
+h2 {
+    font-size: 20px;
+    font-size: 2.0rem;
+    font-size: 20px;
+}
+p {
+    font-size: 14px;
+    font-size: 1.4rem;
+    line-height: 1.3;
+}
