--- a/css/reset.css
+++ b/css/reset.css
@@ -49,6 +49,9 @@ body {
     background: #FA4E06;
     min-width: 320px;
 }
+html {
+    font-size: 62.5%;
+}
 a {
     text-decoration: none;
 }
@@ -58,12 +61,11 @@ h1 {
     line-height: 1.4;
 }
 h2 {
-    font-size: 20px;
     font-size: 2.0rem;
     font-size: 20px;
 }
 p {
-    font-size: 14px;
-    font-size: 1.4rem;
+    font-size: 16px;
+    font-size: 1.6rem;
     line-height: 1.3;
 }
